<resources>
    <string name="app_name">muzik</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="sign_in_google">Continue with google</string>
    <string name="sign_in_fb">Continue with facebook</string>
    <string name="sign_up_google">Sign up with google</string>
    <string name="sign_up_fb">Sign up with facebook</string>
    <string name="create_account">Create an account</string>
    <string name="already_have_account">I already have an account</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_up_continue">Continue</string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--    user information-->
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>

    <!--    menu navigation bar-->

    <string name="library">Library</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="upload">Upload</string>

    <string name="listening_history">Listening history</string>
    <string name="device_songs">Device songs</string>
    <string name="play_list">Playlist</string>
    <string name="create_play_list">Create playlist </string>
    <string name="playlist_title">Playlist name </string>
    <string name="song_playlist">Song Playlist</string>
    <string name="see_all">See all</string>


    <string name="google_server_client_id">"312435550720–5d5ueist0pnnon2gsqnqco8pbduth0sq.apps.googleusercontent.com"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_music_player">MusicPlayerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="reply">Trả lời</string>
    <string name="empty_list_comment">This track doesn\'t have any comments. Be the first!</string>
    <string name="create_comment">Viết bình luận...</string>
    <string name="comment">Bình luận</string>
</resources>