<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:paddingTop="0dp"
        tools:context=".ui.fragments.Library">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/font_size_heading_1"
            android:text="@string/library" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/font_size_large"
                android:text="@string/listening_history"
                android:textColor="@color/primary_text"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:textSize="@dimen/font_size_medium"
                android:textColor="@color/sub_text"
                android:text="@string/see_all"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/rec_view_history"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_height="200dp"/>
    </LinearLayout>
</layout>
