<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SignUpPhase1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_sign_in_fb"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="#4880F0"

            android:drawableLeft="@drawable/icon_fb"
            android:text="@string/sign_up_fb"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/btn_sign_in_google"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/icon_gg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_fb"
            android:text="@string/sign_up_google"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_email"
            android:hint="Email"
            android:text="@={viewmodel.email}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_in_google"
            android:inputType="textEmailAddress"
            style="@style/Auth.EditText"
            />
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:text="@={viewmodel.password}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_email"
            android:inputType="textPassword"
            style="@style/Auth.EditText"
            />
        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#979797"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_password"
            android:text="@string/sign_up_with_email"
            android:onClick="@{() -> viewmodel.onSignUpWithEmailClicked()}"




            />
    </androidx.constraintlayout.widget.ConstraintLayout>






</FrameLayout>