<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="24dp"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SignInActivity">

    <Button
        android:id="@+id/btn_navigate_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        app:backgroundTint="@null"
        android:drawableLeft="@drawable/ic_action_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_sign_in_google"
        android:layout_width="match_parent"

        android:drawableLeft="@drawable/icon_gg"
        android:layout_height="56dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/sign_in_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_sign_in_fb"
        android:layout_width="match_parent"
        android:layout_height="56dp"

        android:drawableLeft="@drawable/icon_fb"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in_fb"
        android:backgroundTint="#4880F0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_google" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:text="Continue"

        android:backgroundTint="#979797"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textStyle="bold"
        android:fontWeight="@integer/font_weight_bold"
        android:textSize="@dimen/font_size_heading"

        android:text="SIGN IN"
        app:layout_constraintBottom_toBottomOf="@+id/btn_navigate_back"
        app:layout_constraintStart_toEndOf="@+id/btn_navigate_back"
        app:layout_constraintTop_toTopOf="@+id/btn_navigate_back" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="Email"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_fb" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="Password"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <TextView
        android:id="@+id/btn_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:text="@string/forget_password"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_continue" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:src="@drawable/logo_no_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>